--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
 </head>
 <body>
-    {% block main %}
 
-    {% endblock %}
+    <div class="container">
+        {% block main %}
+
+        {% endblock %}
+    </div>
+
 </body>
 </html>
